# ActMix

./: README.md  pyproject.toml
conf/: config.yaml
conf/dataset/: adult_census.yaml  magic_gamma.yaml  power_plant.yaml
conf/model/: actmix.yaml  mlp_actmix.yaml  mlp_gelu.yaml  mlp_prelu.yaml  mlp_relu.yaml
conf/training/: default.yaml
scripts/: analyze_weights.py  benchmark_xgboost.py  train.py  train_all_models.sh  train_cv.py  train_cv_all_models.sh
src/: __init__.py  config.py  metrics.py  schedulers.py  system.py  trainer.py
src/datamodules/: __init__.py  base.py  uci_classification.py  uci_regression.py
src/models/: __init__.py  actmix_mlp.py  base.py  baselines.py
src/models/layers/: __init__.py  actmix_layer.py
